# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.195 2005/03/24 15:37:54 wolf31o2 Exp $

  24 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/arm.py, catalyst,
  modules/generic_stage_target.py:
  Applying arm patch from vapier and closing bug #86466. This is now catalyst
  1.1.8, so enjoy.

  24 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org> +livecd/files/mkvardb,
  livecd/runscript/default-runscript.sh,
  targets/livecd-stage1/livecd-stage1.sh:
  Adding back in the kill for livecd-stage1 for gconfd-2 and resolving bug
  #73363. Adding in mkvardb script to create a /var/db/pkg entry from an
  arbitrary set of files. Modifying default-runscript.sh to copy mkvardb to
  /tmp in the chroot.

  19 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/ppc-archscript.sh:
  Added -l to mkisofs line for ppc as this allows full 31 character file names.

  16 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/cdtar/yaboot-1.3.11-cdtar.tar.bz2, catalyst:
  Changing catalyst version to 1.1.8_pre1 and updating yaboot cdtar to allow
  for multiple initrd files.

  16 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/ppc-archscript.sh:
  Modifed PPC archscript to close bug #84648 and also to make the PPC
  archscript produce multiple initrd files, like x86/amd64.

  09 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/cdtar/isolinux-2.11-cdtar.tar.bz2,
  -livecd/cdtar/isolinux-2.11-memtest86+-cdtar.tar.bz2,
  livecd/runscript/ppc-archscript.sh:
  Alright, so I lied to you. This is now the 1.1.7 release. I removed the 2.11
  isolinux cdtar tarballs and updated the ppc-archscript.sh to use the
  livecd/volid for the HFS volid, too.

  09 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  Calling this one 1.1.7 and rolling a tarball.

  08 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>